Ajout du glossaire responsive

--- a/formulaire.html
+++ b/formulaire.html
@@ -6,6 +6,10 @@
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+    <nav class="navbar">
+  <a href="index.html">🏠 Galerie</a>
+  <a href="formulaire.html">➕ Ajouter un galet</a>
+</nav>
   <h1>Ajouter une fiche de galet</h1>
   <form action="api/enregistrer.php" method="POST" enctype="multipart/form-data">
     <label>Nom du galet : <input type="text" name="nom" required></label><br>
