--- a/index.html
+++ b/index.html
@@ -20,8 +20,22 @@
   </style>
 </head>
 <body>
-  <h1>Galerie de Galets</h1>
-  <div id="liste-galets"></div>
+  <nav class="navbar">
+    <a href="index.html">🏠 Galerie</a>
+    <a href="formulaire.html">➕ Ajouter un galet</a>
+  </nav>
+
+  <main class="contenu">
+    <section id="galerie">
+      <h1>Galerie de Galets</h1>
+      <!-- Les galets seront injectés ici -->
+    </section>
+
+    <aside id="glossaire">
+      <h2>Glossaire</h2>
+      <ul id="liste-glossaire"></ul>
+    </aside>
+  </main>
 
   <script src="js/main.js" defer></script>
 </body>
