--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 <body>
   <nav class="navbar">
     <a href="index.html">🏠 Galerie</a>
+    <a href="glossaire.html">🌍 Glossaire</a>
     <a href="formulaire.html">➕ Ajouter un galet</a>
   </nav>
 
@@ -31,10 +32,10 @@
       <!-- Les galets seront injectés ici -->
     </section>
 
-    <aside id="glossaire">
+<!--     <aside id="glossaire">
       <h2>Glossaire</h2>
       <ul id="liste-glossaire"></ul>
-    </aside>
+    </aside> -->
   </main>
 
   <script src="js/main.js" defer></script>
